@@ -1,3 +1,5 @@
+* Display name on contact mechanism record name
+
 Version 5.4.0 - 2019-11-04
 * Bug fixes (see mercurial logs for details)
 * Limit subdivision types on address
